Finished coding homepage HTML

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Unplugged Project</title>  
+  <title>Unplugged Retreat</title>  
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -59,6 +59,54 @@
       <input type="button" value="Download Itinerary">
     </div>
 </aside>
+
+<section class="features">
+  <div class="content-wrapper">
+    <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+    <!--Add your Features content here-->
+    <article>
+      <p class="fontawesome-icon"></p>
+      <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+    </article>
+
+    <article>
+      <p class="fontawesome-icon"></p>
+      <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+    </article>
+
+    <article>
+      <p class="fontawesome-icon"></p>
+      <p class="features-item-description">Private chef team providing on demand meals- just like your team kitchen.</p>
+     </article>
+
+     <article>
+      <p class="fontawesome-icon"></p>
+      <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+     </article>
+
+     <article>
+      <p class="fontawesome-icon"></p>
+      <p class="features-item-description">Retreat faciliator to manage your day to day activities so you all get a chance to reset.</p>
+     </article>
+
+     <article>
+      <p class="fontawesome-icon"></p>
+      <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+     </article>
+  </div>
+</section>
+
+<section class="reviews">
+  <div class="content-wrapper">
+  <h2>Be a better team in 5 days, like this one.</h2>
+  <article>
+ <div>
+   <h3>LaCrue Bottling Co. October 2018</h3>
+   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nesciunt nobis id sequi itaque perspiciatis optio aperiam aspernatur. Asperiores consequuntur illo optio accusamus. Placeat est reprehenderit nisi et. Fugit, recusandae.</p>
+      </div>   
+    </article>
+  </div>
+</section>
 
 </main> <!--main wrapper-->
 
