--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreat | About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,7 +25,90 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="#">
+        <img src="" alt="unplugged logo">
+      </a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+    </header>
+
+    <main>
+<section class="mission">
+  <div class="content-wrapper">
+    <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+    <div class="mission-content">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum omnis libero illum nam reiciendis temporibus amet tempora, dolores dolore quidem, aliquid cum quibusdam sit id ratione suscipit cupiditate, cumque earum.</p>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit sapiente velit labore perspiciatis magni, ab fuga cum ut vero aperiam iure consequuntur, eveniet earum ullam amet laboriosam expedita voluptates! Dolor.</p>
+    </div>
+  </div> <!--mission content wrapper ends-->
+</section>
+
+
+<section class="map">
+  <figure>
+  </figure>
+  </section>
+  
+  <section class="contact-section">
+    <div class="content-wrapper">
+      <h2>Contact us, because you all need this.</h2>
+      <address class="contact-content">
+        <div>
+          <h4>General Information</h4>
+        <p>
+      333 Main St, Lake Geneva, WI 53147<br>
+      555-555-5555<br>
+      hello@unplugged.com   
+      </p>
+    </div>
+  </div>
+    <h4>Chat with a faciliator</h4>
+    <p>
+      555-555-5556<br>
+      facilitator@unplugged.com
+        </p>
+     </div>
+    </address> <!--contact-content div ends-->
+  </section> <!--contact-content wrapper ends-->
+</main> <!--main wrapper-->
+
+<footer>
+  <div class="content-wrapper">
+    <div class="footer-content">
+      <div class="contact">
+        <h4>Contact</h4>
+        <address>
+          <p>555-555-5555<br>
+            hello@unplugged.com
+          </p>
+        </address>
+      </div>
+      <div class="social">
+        <h4>Social</h4>
+        <div class="social-icon">
+          <p><a href="http://www.facebook.com/yoursite" target="_blank"></a></p>
+          <p><a href="http://www.twitter.com/yoursite" target="_blank"></a></p>
+          <p><a href="http://www.instagram.com/yoursite" target="_blank"></a></p>
+          <!--other social links here-->
+        </div>
+      </div>
+    </div> <!--footer content ends-->
+  </div> <!--footer content-wrapper ends-->
+  
+  <div class="copyright">  
+    <p>Copyright 2019 | Unplugged</p>
+  </div>
+  </footer>
+
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
