--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Unplugged Retreat</title>  
+  <title>Unplugged Retreat | Homepage </title>  
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
