--- a/index.html
+++ b/index.html
@@ -49,21 +49,23 @@
 
 <aside>
   <div class="content-wrapper">
+    <div class="form-description">
     <h3>What to join the next retreat?</h3>
       <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
     </div>
-   
     <div class="form">
       <h3>Find out more</h3>
       <input type="text" name="name" value="name@email.com">
       <input type="button" value="Download Itinerary">
     </div>
+    </div>
 </aside>
 
 <section class="features">
   <div class="content-wrapper">
-    <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+    <h2>Have the work week you always dreamed of — without the bad wifi.</h2>
     <!--Add your Features content here-->
+    <div class="features-items">
     <article>
       <p class="fontawesome-icon"></p>
       <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
@@ -93,6 +95,7 @@
       <p class="fontawesome-icon"></p>
       <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
      </article>
+     </div>
   </div>
 </section>
 
