added text styles

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
-</head>
-<body>
 
+  <!--Google Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+</head>
+
+<body>
   <!-- Add your site or application content here -->
 <header>
 <div class="content-wrapper">
