--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <aside>
   <div class="content-wrapper">
     <div class="form-description">
-    <h3>What to join the next retreat?</h3>
+    <h3>Want to join the next retreat?</h3>
       <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
     </div>
     <div class="form">
