--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
   <!-- Add your site or application content here -->
 <header>
 <div class="content-wrapper">
+ <figure>
   <a href="#">
-    <img src="" alt="unplugged logo">
+    <img src="img/unpluggedlogo.png" alt="unplugged logo">
   </a>
+  </figure>
   <div class="header-divider"></div>
   <nav>
     <ul>
@@ -106,6 +108,9 @@
   <div class="content-wrapper">
   <h2>Be a better team in 5 days, like this one.</h2>
   <article>
+    <figure>
+        <img src="img/reviews.jpg" alt="group of friends">
+    </figure>
  <div>
    <h3>LaCrue Bottling Co. October 2018</h3>
    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nesciunt nobis id sequi itaque perspiciatis optio aperiam aspernatur. Asperiores consequuntur illo optio accusamus. Placeat est reprehenderit nisi et. Fugit, recusandae.</p>
