--- a/about/index.html
+++ b/about/index.html
@@ -23,13 +23,14 @@
 </head>
 
 <body>
-
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#">
-        <img src="" alt="unplugged logo">
-      </a>
+      <figure>
+        <a href="../index.html">
+          <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+        </a>
+      </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -54,9 +55,10 @@
 
 <section class="map">
   <figure>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3346.713965986018!2d-96.91468918496483!3d32.98494748090975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864c25fb4f133405%3A0x4e580e7c8fd8b98e!2sH%20Mart%20Carrollton!5e0!3m2!1sen!2sus!4v1645762497560!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </figure>
   </section>
-  
+
   <section class="contact-section">
     <div class="content-wrapper">
       <h2>Contact us, because you all need this.</h2>
@@ -66,7 +68,7 @@
         <p>
       333 Main St, Lake Geneva, WI 53147<br>
       555-555-5555<br>
-      hello@unplugged.com   
+      hello@unplugged.com
       </p>
     </div>
   <div>
@@ -102,8 +104,8 @@
       </div>
     </div> <!--footer content ends-->
   </div> <!--footer content-wrapper ends-->
-  
-  <div class="copyright">  
+
+  <div class="copyright">
     <p>Copyright 2019 | Unplugged</p>
   </div>
   </footer>
