--- a/faq/index.html
+++ b/faq/index.html
@@ -23,13 +23,14 @@
 </head>
 
 <body>
-
   <!-- Add your site or application content here -->
 <header>
   <div class="content-wrapper">
-    <a href="#">
-      <img src="" alt="unplugged logo">
-    </a>
+    <figure>
+      <a href="../index.html">
+        <img src="../img/unpluggedlogo.png" alt="unplugged logo">
+      </a>
+    </figure>
     <div class="header-divider"></div>
     <nav>
       <ul>
